@@ -1,5 +1,5 @@
 @ECHO OFF
-SET ZLIB_VERSION=1.2.13
+SET ZLIB_VERSION=1.3
 SET BZIP2_VERSION=1ea1ac188ad4b9cb662e3f8314673c63df95a589
 SET XZ_VERSION=5.4.4
 SET ZSTD_VERSION=1.5.5
