@@ -115,7 +115,7 @@ DEFINE_TEST(test_read_format_isojoliet_long)
 	pathname[102] = '3';
 	pathname[103] = '\0';
 	assertEqualInt(0, archive_read_next_header(a, &ae));
-	assertEqualString("hardlink", archive_entry_pathname(ae));
+	assertEqualString(pathname, archive_entry_pathname(ae));
 	assertEqualInt(AE_IFREG, archive_entry_filetype(ae));
 	assert(archive_entry_hardlink(ae) == NULL);
 	assertEqualInt(6, archive_entry_size(ae));
@@ -129,9 +129,9 @@ DEFINE_TEST(test_read_format_isojoliet_long)
 	/* Second name for the same regular file (this happens to be
 	 * returned second, so does get marked as a hardlink). */
 	assertEqualInt(0, archive_read_next_header(a, &ae));
-	assertEqualString(pathname, archive_entry_pathname(ae));
+	assertEqualString("hardlink", archive_entry_pathname(ae));
 	assertEqualInt(AE_IFREG, archive_entry_filetype(ae));
-	assertEqualString("hardlink", archive_entry_hardlink(ae));
+	assertEqualString(pathname, archive_entry_hardlink(ae));
 	assert(!archive_entry_size_is_set(ae));
 	assertEqualInt(archive_entry_is_encrypted(ae), 0);
 	assertEqualIntA(a, archive_read_has_encrypted_entries(a), ARCHIVE_READ_FORMAT_ENCRYPTION_UNSUPPORTED);
