@@ -1,3 +1,5 @@
+Sep 12, 2023: libarchive 3.7.2 released
+
 Jul 29, 2023: libarchive 3.7.1 released
 
 Jul 18, 2023: libarchive 3.7.0 released
